[package]
name = "starcoin-proptest-helpers"
version = "0.4.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
libra-proptest-helpers = { package="libra-proptest-helpers",  git = "https://github.com/starcoinorg/libra", rev="5a504b6913aad6318e3cdf572ae5242ed88f0847" }

proptest = "0.10.1"
proptest-derive = "0.2.0"
