[package]
name = "starcoin-canonical-serialization"
version = "0.4.6"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0" }
lcs = { package="libra-canonical-serialization", git = "https://github.com/starcoinorg/libra", rev="8b9fb2a00721f3bc3484f787ab17d387b174a140"}

