[package]
name = "starcoin-canonical-serialization"
version = "0.4.6"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0" }
lcs = { package="libra-canonical-serialization", git = "https://github.com/starcoinorg/libra", rev="5a504b6913aad6318e3cdf572ae5242ed88f0847"}

