[package]
name = "starcoin-move-compiler"
version = "0.4.6"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
once_cell = "1.4.1"
tempfile = "3.1.0"
regex = { version = "1.3.9", default-features = false, features = ["std", "perf"] }
move-lang = { package="move-lang", git = "https://github.com/starcoinorg/libra", rev="8b9fb2a00721f3bc3484f787ab17d387b174a140" }
starcoin-crypto = { path = "../../commons/crypto"}
starcoin-vm-types = { path = "../types"}
starcoin-logger = { path = "../../commons/logger"}

[dev-dependencies]
stest = {path = "../../commons/stest"}
